fixed word-break on textareas, changed header logo, changed font, removed blur

--- a/src/style.less
+++ b/src/style.less
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&family=Noto+Color+Emoji&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&family=Noto+Color+Emoji&display=swap");
 
 @text: #ffffff;
 @background: #0f091b;
@@ -29,7 +29,7 @@
 @screen-sm: 640px;
 
 :root {
-  font-family: "Poppins", "Noto Color Emoji", sans-serif;
+  font-family: "Raleway", "Noto Color Emoji", sans-serif;
   font-size: 20px;
   line-height: 1.5;
   font-weight: 400;
@@ -97,7 +97,7 @@ i {
   border-radius: @border-radius-sm;
   border: 1px solid rgba(255, 255, 255, 0.3);
   // box-shadow: -1px -1px 0 rgba(255, 255, 255, 0.1), 1px 1px 0 rgba(155, 167, 230, 0.3);
-  backdrop-filter: blur(5px);
+  // backdrop-filter: blur(5px);
   .light {
     // background: radial-gradient(
     //   198.52% 92.5% at 42.64% 30.27%,
@@ -109,7 +109,7 @@ i {
       rgba(58, 53, 93, 0.5) 0%,
       rgba(0, 0, 0, 0) 100%
     );
-    background: rgba(67, 59, 118, 0.627);
+    background: rgba(67, 59, 118, 0.719);
   }
   .dark {
     background: radial-gradient(
@@ -117,7 +117,7 @@ i {
       rgba(0, 0, 0, 0.5) 0%,
       rgba(0, 0, 0, 0) 100%
     );
-    background: rgba(17, 12, 23, 0.6);
+    background: rgba(17, 12, 23, 0.67);
   }
 }
 
